
===New Functions:
*Get/SetIngestibleConsumeSound
*SetFactionCombatReactionTemp
- The above is still registered, but was split in two for readability:
	*SetAllyTemp (alias: SetAllyShowOff)
	*SetEnemyTemp (alias: SetEnemyShowOff)
*GetEquippedItemRefForItem
*TopicInfoGet/SetResponseStrings
*(WIP functions from last update are still not done, sorry!)

===Credits:
-Trooper for documenting and suggesting SetAlly/EnemyTemp
*lStewieAl for helping fix the conflict.


//===v1.31
===New Function:
*TopicInfoSetNthResponseString


//===v1.35
===Bug Fixes:
*Prevent OnCornerMessage event from firing for messages that have empty description strings.

===New Functions:
*GetItemCanHaveHealth
*SayTo_GetTopic
*SayTo_GetTopicInfo
*RemoveFormFromFormList
*GetZoneRespawns
*ClearCinematicTextQueue
*GetCellEncounterZone
*ShowPauseMenu
*RemoveFormFromLeveledList


//===v1.40
===Bug Fixes:
*Nada

===New Functions:
*SetWeaponFlag (alias: SetWeaponHasFlag)
*SetOwnershipTemp
*IsActorAlt
*ApplyEasing (alias: Ease)
*Matrix_IsMatrix (alias: Mat_IsMat)
*Matrix3x3_GetQuaternion (alias: Mat_GetQuat)
*Quaternion_GetMatrix (alias: Quat_GetMat)
*Matrix_Transpose (alias: Mat_T)
*Matrix_Dump (alias: Mat_Dump)
*Matrix_ApplyOperationWithScalar (alias: Mat_ApplyOpWithScal)
*Matrix_ApplyOperationWithMatrix (alias: Mat_ApplyOpWithMat)


//===v1.45

*AS OF THIS VERSION, xNVSE 6.2.5 or greater is required.*

===Changes:
*GetCalculatedPerkPoints now only returns 1 or 0 (support for Tweaks' iPerksPerLevel is scrapped).

===Bug Fixes:
*Refactored functions with array arguments to work with inline (used to only work with array variables).
*Fix TopicInfoSetResponseStrings string memory leak
*Potentially fix the ShowRaceMenu fix not being applied (brain rot).

===New Functions:
*ReadFromJSONFile
*WriteToJSONFile
*GetCalculatedItemValue

*Ini??


====== (Template:)

//===v???
===Bug Fixes:
*

===New Functions:
*

******DON'T FORGET TO UPDATE THE PLUGIN VERSION BEFORE EVERY RELEASE*********