@@ -175,8 +175,9 @@ In order to filter those out, there is now a new flag: NoSlotlessItems
 
 *AS OF THIS VERSION, xNVSE 6.2.5 or greater is required.*
 
-===Changes:
+===Misc:
 *GetCalculatedPerkPoints now only returns 1 or 0 (support for Tweaks' iPerksPerLevel is scrapped).
+*Added an ini for bResetInteriorResetsActors.
 
 ===Bug Fixes:
 *Refactored functions with array arguments to work with inline (used to only work with array variables).
